# llm

./: .gitignore  Makefile  README.md  pyproject.toml
markdowns/: 3b1b_1_dl.md  3b1b_2_dl.md  3b1b_3_dl.md  3b1b_4_dl.md
src/: attention.py  dataloader.py  model.py  tokenizer.py
tests/: test_attention.py  test_dataloader.py  test_model.py  test_tokenizer.py
