[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Building an LLM from scratch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "tiktoken>=0.5.1",
    "jupyterlab>=4.0",
    "matplotlib>=3.7.1",
    "numpy>=1.26",
    "tqdm>=4.66.1",
    "pandas>=2.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "flake8>=6.1.0",  
]
bonus = [
    "safetensors>=0.6.2",
    "huggingface-hub>=0.20",
    "transformers>=4.40",
    "sentencepiece>=0.1.99",
    "scikit-learn>=1.3.1",
]
